@@ -6,6 +6,7 @@ import org.junit.Test;
 
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.List;
 
 import static org.hamcrest.Matchers.is;
 import static org.junit.Assert.*;
@@ -15,7 +16,7 @@ public class ConvertList2ArrayTest {
     @Test
     public void when7elementsThen9() {
         int[][] result = ConvertList2Array.toArray(
-                Arrays.asList(1, 2, 3, 4, 5, 6, 7), 3
+                List.of(1, 2, 3, 4, 5, 6, 7), 3
         );
         int[][] expected = {
                 {1, 2, 3},
