@@ -13,12 +13,12 @@ public class NotifyAccountTest {
 
     @Test
     public void sent() {
-        List<Account> accounts = Arrays.asList(
+        List<Account> accounts = List.of(
                 new Account("123", "Petr Arsentev", "eDer3432f"),
                 new Account("142", "Petr Arsentev", "000001")
         );
         HashSet<Account> expect = new HashSet<>(
-                Arrays.asList(
+                List.of(
                         new Account("123", "Petr Arsentev", "eDer3432f"),
                         new Account("142", "Petr Arsentev", "000001")
                 )
@@ -28,15 +28,15 @@ public class NotifyAccountTest {
 
     @Test
     public void sentDuplicate() {
-        List<Account> accounts = Arrays.asList(
+        List<Account> accounts = List.of(
                 new Account("123", "Petr Arsentev", "eDer3432f"),
                 new Account("123", "Bars", "786464a"),
                 new Account("142", "NotPetr", "7464131"),
                 new Account("142", "Petr Arsentev", "000001"),
                 new Account("999", "ramPamPam", "000001")
         );
-        HashSet<Account> expect = new HashSet<>(
-                Arrays.asList(
+        HashSet<Account> expect = new HashSet<Account>(
+                List.of(
                         new Account("123", "Petr Arsentev", "eDer3432f"),
                         new Account("142", "NotPetr", "7464131"),
                         new Account("999", "ramPamPam", "000001")
